--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.3",
     "moment": "^2.30.1",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
