--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "axios": "^1.7.3",
     "moment": "^2.30.1",
     "nanoid": "^5.0.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0-rc-f65ac7bd-20240826",
+    "react-dom": "^19.0.0-rc-f65ac7bd-20240826",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
