--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,6 @@ services:
     build:
       context: .
     container_name: agenda
-    ports:
-      - "80:80"
     volumes:
       - .:/app:rw,delegated
     tty: true
@@ -17,6 +15,7 @@ services:
       - "traefik.http.routers.frontend.entrypoints=websecure"
       - "traefik.http.routers.frontend.tls.certresolver=letsencrypt"
       - "traefik.http.services.frontend.loadbalancer.server.port=80"
+    command: npm run preview
 
 networks:
   proxy:
